// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BarStack > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f9f9fa;
  border-radius: 0.25rem;
  box-shadow: 0px 0px 8px 2px #d9dadd66;
  overflow: hidden;
}

.emotion-0 .emotion-3:nth-child(5n+1) {
  background: linear-gradient(-45deg, #f9f9fa1A 25%,
        #8c40ef 25%, #8c40ef 50%,
        #f9f9fa1A 50%, #f9f9fa1A 75%, #8c40ef
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #8c40ef;
}

.emotion-0 .emotion-3:nth-child(5n+2) {
  background-color: #8c40efD9;
  background-image: linear-gradient(
          135deg,
          #e9eaeb33 25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          #e9eaeb33 25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          #e9eaeb33 25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          #e9eaeb33 25%,
          #8c40ef12 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.emotion-0 .emotion-3:nth-child(5n+3) {
  background: linear-gradient(-45deg, #f9f9fa1A 25%,
        #8c40ef4D 25%, #8c40ef4D 50%,
        #f9f9fa1A 50%, #f9f9fa1A 75%, #8c40ef4D
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #b824f9;
}

.emotion-0 .emotion-3:nth-child(5n+4) {
  background-color: #b824f9;
  background-image: linear-gradient(
          135deg,
          #f9f9fa33 25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          #f9f9fa33 25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          #f9f9fa33 25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          #f9f9fa33 25%,
          #b824f9 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.emotion-0 .emotion-3:nth-child(5n+5) {
  background: linear-gradient(-45deg, #f9f9fa40 25%,
        #b824f940 25%, #b824f940 50%,
        #f9f9fa40 50%, #f9f9fa40 75%, #b824f940
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #b824f9BF;
}

.emotion-2 {
  width: 0px;
  -webkit-transition: width 500ms;
  transition: width 500ms;
  background-color: #f9f9fa;
}

.emotion-4 {
  height: 50px;
  font-weight: 600;
  color: #f9f9fa;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.5rem;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-shadow: -1px 0 #151a2dB3,0 1px #151a2dB3,1px 0 #151a2dB3,0 -1px #151a2dB3;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
        style="width: 10.638297872340425%;"
      >
        <div
          class="emotion-4 emotion-5"
        >
          Hello
        </div>
      </div>
      <div
        class="emotion-2 emotion-3"
        style="width: 22.340425531914892%;"
      >
        <div
          class="emotion-4 emotion-5"
        />
      </div>
      <div
        class="emotion-2 emotion-3"
        style="width: 22.340425531914892%;"
      >
        <div
          class="emotion-4 emotion-5"
        >
          Encore
        </div>
      </div>
      <div
        class="emotion-2 emotion-3"
        style="width: 22.340425531914892%;"
      >
        <div
          class="emotion-4 emotion-5"
        >
          Next
        </div>
      </div>
      <div
        class="emotion-2 emotion-3"
        style="width: 22.340425531914892%;"
      >
        <div
          class="emotion-4 emotion-5"
        >
          Bye bye
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BarStack > should render correctly with event handlers 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f9f9fa;
  border-radius: 0.25rem;
  box-shadow: 0px 0px 8px 2px #d9dadd66;
  overflow: hidden;
}

.emotion-0 .emotion-3:nth-child(5n+1) {
  background: linear-gradient(-45deg, #f9f9fa1A 25%,
        #8c40ef 25%, #8c40ef 50%,
        #f9f9fa1A 50%, #f9f9fa1A 75%, #8c40ef
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #8c40ef;
}

.emotion-0 .emotion-3:nth-child(5n+2) {
  background-color: #8c40efD9;
  background-image: linear-gradient(
          135deg,
          #e9eaeb33 25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          #e9eaeb33 25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          #e9eaeb33 25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          #e9eaeb33 25%,
          #8c40ef12 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.emotion-0 .emotion-3:nth-child(5n+3) {
  background: linear-gradient(-45deg, #f9f9fa1A 25%,
        #8c40ef4D 25%, #8c40ef4D 50%,
        #f9f9fa1A 50%, #f9f9fa1A 75%, #8c40ef4D
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #b824f9;
}

.emotion-0 .emotion-3:nth-child(5n+4) {
  background-color: #b824f9;
  background-image: linear-gradient(
          135deg,
          #f9f9fa33 25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          #f9f9fa33 25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          #f9f9fa33 25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          #f9f9fa33 25%,
          #b824f9 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.emotion-0 .emotion-3:nth-child(5n+5) {
  background: linear-gradient(-45deg, #f9f9fa40 25%,
        #b824f940 25%, #b824f940 50%,
        #f9f9fa40 50%, #f9f9fa40 75%, #b824f940
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #b824f9BF;
}

.emotion-2 {
  width: 0px;
  -webkit-transition: width 500ms;
  transition: width 500ms;
  background-color: #f9f9fa;
}

.emotion-4 {
  height: 50px;
  font-weight: 600;
  color: #f9f9fa;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.5rem;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-shadow: -1px 0 #151a2dB3,0 1px #151a2dB3,1px 0 #151a2dB3,0 -1px #151a2dB3;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
        style="width: 100%;"
      >
        <div
          class="emotion-4 emotion-5"
        >
          Hello
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BarStack > should render correctly with total 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f9f9fa;
  border-radius: 0.25rem;
  box-shadow: 0px 0px 8px 2px #d9dadd66;
  overflow: hidden;
}

.emotion-0 .emotion-3:nth-child(5n+1) {
  background: linear-gradient(-45deg, #f9f9fa1A 25%,
        #8c40ef 25%, #8c40ef 50%,
        #f9f9fa1A 50%, #f9f9fa1A 75%, #8c40ef
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #8c40ef;
}

.emotion-0 .emotion-3:nth-child(5n+2) {
  background-color: #8c40efD9;
  background-image: linear-gradient(
          135deg,
          #e9eaeb33 25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          #e9eaeb33 25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          #e9eaeb33 25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          #e9eaeb33 25%,
          #8c40ef12 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.emotion-0 .emotion-3:nth-child(5n+3) {
  background: linear-gradient(-45deg, #f9f9fa1A 25%,
        #8c40ef4D 25%, #8c40ef4D 50%,
        #f9f9fa1A 50%, #f9f9fa1A 75%, #8c40ef4D
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #b824f9;
}

.emotion-0 .emotion-3:nth-child(5n+4) {
  background-color: #b824f9;
  background-image: linear-gradient(
          135deg,
          #f9f9fa33 25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          #f9f9fa33 25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          #f9f9fa33 25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          #f9f9fa33 25%,
          #b824f9 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.emotion-0 .emotion-3:nth-child(5n+5) {
  background: linear-gradient(-45deg, #f9f9fa40 25%,
        #b824f940 25%, #b824f940 50%,
        #f9f9fa40 50%, #f9f9fa40 75%, #b824f940
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #b824f9BF;
}

.emotion-2 {
  width: 0px;
  -webkit-transition: width 500ms;
  transition: width 500ms;
  background-color: #f9f9fa;
}

.emotion-4 {
  height: 50px;
  font-weight: 600;
  color: #f9f9fa;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.5rem;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-shadow: -1px 0 #151a2dB3,0 1px #151a2dB3,1px 0 #151a2dB3,0 -1px #151a2dB3;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
        style="width: 2%;"
      >
        <div
          class="emotion-4 emotion-5"
        >
          Hello
        </div>
      </div>
      <div
        class="emotion-2 emotion-3"
        style="width: 4.2%;"
      >
        <div
          class="emotion-4 emotion-5"
        />
      </div>
      <div
        class="emotion-2 emotion-3"
        style="width: 4.2%;"
      >
        <div
          class="emotion-4 emotion-5"
        >
          Encore
        </div>
      </div>
      <div
        class="emotion-2 emotion-3"
        style="width: 4.2%;"
      >
        <div
          class="emotion-4 emotion-5"
        >
          Next
        </div>
      </div>
      <div
        class="emotion-2 emotion-3"
        style="width: 4.2%;"
      >
        <div
          class="emotion-4 emotion-5"
        >
          Bye bye
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
